{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 200,
  "lineage": "95ef5afe-dcaa-d1d7-4b5f-d6764c603ab0",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/AzureBastionSubnet-nsg",
            "location": "eastus2",
            "name": "AzureBastionSubnet-nsg",
            "resource_group_name": "Softradix-AKS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManagerInbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHttpsInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowGetSessionInformationOutbound",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "AllowSshRdpOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "AllowBastionHostCommunicationInbound",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Outbound",
                "name": "AllowBastionHostCommunicationOutbound",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet-nsg",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/publicIPAddresses/softradix-aks-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.75.26.117",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "softradix-aks-bastion-pip",
            "resource_group_name": "Softradix-AKS-RG",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-bastion-pip",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/AzureBastionSubnet-nsg",
            "subnet_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/AzureBastionSubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion.azurerm_network_security_group.bastion",
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/natGateways/softradix-aks-natgw",
            "idle_timeout_in_minutes": 10,
            "location": "eastus2",
            "name": "softradix-aks-natgw",
            "resource_group_name": "Softradix-AKS-RG",
            "resource_guid": "35d4f9e8-7442-470d-848c-03b9d925cf28",
            "sku_name": "Standard",
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            },
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-natgw",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/natGateways/softradix-aks-natgw|/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/publicIPAddresses/softradix-aks-natgw-pip",
            "nat_gateway_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/natGateways/softradix-aks-natgw",
            "public_ip_address_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/publicIPAddresses/softradix-aks-natgw-pip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_gateway.azurerm_nat_gateway.this",
            "module.nat_gateway.azurerm_public_ip.nat",
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/publicIPAddresses/softradix-aks-natgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.200.202.41",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "softradix-aks-natgw-pip",
            "resource_group_name": "Softradix-AKS-RG",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            },
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-natgw-pip",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "aks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-node-subnet",
            "nat_gateway_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/natGateways/softradix-aks-natgw",
            "subnet_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-node-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_gateway.azurerm_nat_gateway.this",
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_subnet.bastion",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_subnet_network_security_group_association.aks_nodes",
            "module.virtual_network.azurerm_subnet_network_security_group_association.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/softradix-aks-node-subnet-nsg",
            "location": "eastus2",
            "name": "softradix-aks-node-subnet-nsg",
            "resource_group_name": "Softradix-AKS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInBound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInBound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInternetInBound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-node-subnet-nsg",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/softradix-aks-pe-subnet-nsg",
            "location": "eastus2",
            "name": "softradix-aks-pe-subnet-nsg",
            "resource_group_name": "Softradix-AKS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInBound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInternetInBound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-pe-subnet-nsg",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-node-subnet",
            "name": "softradix-aks-node-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Softradix-AKS-RG",
            "virtual_network_name": "softradix-aks-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-node-subnet",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e",
            "virtual_network_name": "softradix-aks-vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Softradix-AKS-RG",
            "virtual_network_name": "softradix-aks-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e",
            "virtual_network_name": "softradix-aks-vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-pe-subnet",
            "name": "softradix-aks-pe-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Softradix-AKS-RG",
            "virtual_network_name": "softradix-aks-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-pe-subnet",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e",
            "virtual_network_name": "softradix-aks-vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-node-subnet",
            "network_security_group_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/softradix-aks-node-subnet-nsg",
            "subnet_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-node-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.aks_nodes",
            "module.virtual_network.azurerm_subnet.aks_nodes",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-pe-subnet",
            "network_security_group_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/softradix-aks-pe-subnet-nsg",
            "subnet_id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-pe-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_network.azurerm_network_security_group.private_endpoints",
            "module.virtual_network.azurerm_subnet.private_endpoints",
            "module.virtual_network.azurerm_virtual_network.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ea3747f2-1349-4372-b631-90dafaf29d34",
            "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet",
            "location": "eastus2",
            "name": "softradix-aks-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Softradix-AKS-RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-node-subnet",
                "name": "softradix-aks-node-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/softradix-aks-node-subnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/AzureBastionSubnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/virtualNetworks/softradix-aks-vnet/subnets/softradix-aks-pe-subnet",
                "name": "softradix-aks-pe-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e/resourceGroups/Softradix-AKS-RG/providers/Microsoft.Network/networkSecurityGroups/softradix-aks-pe-subnet-nsg"
              }
            ],
            "tags": {
              "Environment": "Production",
              "Owner": "Yogesh",
              "Project": "Terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "softradix-aks-vnet",
            "resource_group_name": "Softradix-AKS-RG",
            "subscription_id": "27735e1f-024e-4bb5-8d3f-6c6a5cd80f1e"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "time_sleep.resource_group_propagation"
          ]
        }
      ]
    }
  ]
}